[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Minigames/HandLabeler/hand_laber_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Textures/UI/HandLabeler/handlabelerbg.png" type="Texture" id=3]
[ext_resource path="res://Scenes/HUD/inventory_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=5]

[node name="hand_labeler" type="CanvasLayer"]
layer = 15
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.35
anchor_top = 0.42
anchor_right = 0.65
anchor_bottom = 0.58
theme = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/Panel"]
anchor_left = 0.406056
anchor_top = 0.120941
anchor_right = 0.918736
anchor_bottom = 0.317816
margin_left = 0.111984
margin_top = -0.0599995
margin_right = -0.192017
margin_bottom = -0.0800018
text = "Hand Labeler"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="item" parent="Control" instance=ExtResource( 4 )]
anchor_left = 0.149
anchor_top = 0.126704
anchor_right = 0.306
anchor_bottom = 0.647704
margin_left = 0.175995
margin_top = -0.0277309
margin_right = -0.256012
margin_bottom = -0.0565262
button_mask = 0

[node name="name" type="LineEdit" parent="Control"]
anchor_left = 0.404097
anchor_top = 0.336528
anchor_right = 0.924028
anchor_bottom = 0.653056
margin_left = 0.23999
margin_top = -0.152008
margin_right = -0.240051
margin_bottom = 0.151978
max_length = 28
placeholder_text = "New Name Here"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="choose_item" type="Button" parent="Control"]
anchor_left = 0.109375
anchor_top = 0.697778
anchor_right = 0.355889
anchor_bottom = 0.859352
margin_top = -0.576004
margin_right = 0.00799561
margin_bottom = 5.504
text = "Choose Item"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="rename_button" type="Button" parent="Control"]
anchor_left = 0.597
anchor_top = 0.697293
anchor_right = 0.920139
anchor_bottom = 0.893775
margin_left = 0.12796
margin_top = -0.492264
margin_bottom = -0.444244
text = "Name Item"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="close_button" type="Button" parent="Control"]
anchor_left = 0.965056
anchor_top = -0.0723827
anchor_right = 1.02431
anchor_bottom = 0.153034
margin_left = 0.12793
margin_top = -0.492264
margin_bottom = -5.44424
text = "x"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 58.0
margin_right = 40.0
margin_bottom = 58.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="Control/choose_item" to="." method="_on_choose_item_pressed"]
[connection signal="pressed" from="Control/rename_button" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="Control/close_button" to="." method="_on_close_button_pressed"]
